# gym-xiangqi

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  publish_package.py  pyproject.toml  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: deployment.yml  lint.yml  main.yml  merge_me.yml  publish-to-pypi.yml  publishing.yml  radon.yml
agents/: random_agent.py  random_agent_test.py
docs/: api.rst  conf.py  examples.rst  gui.rst  index.rst  installation.rst
examples/: agent_v_agent_demo.py  demo.py  game_mode.py
gym-xiangqi/: __init__.py
gym-xiangqi/envs/: xiangqi_env.py
gym_xiangqi/: __init__.py  board.py  constants.py  piece.py  pieces.py  sound.py  utils.py  xiangqi_game.py
gym_xiangqi/agents/: __init__.py  q_learning_agent.py  q_learning_agent_train.py  random_agent.py  random_agent_test.py
gym_xiangqi/envs/: __init__.py  xiangqi_env.py
gym_xiangqi/examples/: __init__.py  agent_v_agent_demo.py  game_mode.py
gym_xiangqi/test/: piece_test.py  utils_test.py  xiangqi_env_test.py
test/: agent_env_test.py  latency_test.py  piece_test.py  xiangqi_env_test.py
