[metadata]
name = gym_xiangqi
version = 0.0.1
author = Li Yon Tan
author_email = tan269@purdue.edu
description = Custom OpenAI gym Xiangqi environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tanliyon/gym-xiangqi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
# TODO: Currently does not matter but double check later.
python_requires = >=3.6
install_requires =
    gym
    wheel
    pygame
    libpulse0:i386

# Config for radon analysis.
[radon]
exclude = *_test.py
# Cyclomatic Complexity
total_average = true
show_complexity = true
# Maintainability Index
show_mi = true
# Raw Analysis
# Halstead Complexity
functions = true