[metadata]
name = gym_xiangqi
author = Li Yon Tan
author_email = tan269@purdue.edu
description = Custom OpenAI gym Xiangqi environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tanliyon/gym-xiangqi
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
# TODO: Currently does not matter but double check later.
python_requires = >=3.6
install_requires =
    gym
    wheel
    pygame

[options.entry_points]
console_scripts =
    agent-v-agent = gym_xiangqi.examples.agent_v_agent_demo:main
    player-v-agent = gym_xiangqi.examples.game_mode:main

# Config for radon analysis.
[radon]
exclude = *_test.py
# Cyclomatic Complexity
total_average = true
show_complexity = true
# Maintainability Index
show_mi = true
# Raw Analysis
# Halstead Complexity
functions = true
